hphp/test/slow/traits/requireclass/requireclass_conflict_01c.bad.php.expectf
Fatal error: Conflicting requirements for 'C' in %s/requireclass_conflict_01c.bad.php on line 6
